force-app/main/default/objects/Student_Support_Case__c/Student_Support_Case__c.object-meta.xml
<CustomObject>
    <description>Student support cases for tracking interventions</description>
    <label>Student Support Case</label>
    <nameField>
        <displayFormat>SSC-{00000}</displayFormat>
        <label>Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Support Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>