force-app/main/default/objects/Student_Support_Case__c/fields/Assigned_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Advisor handling the case</description>
    <label>Assigned Advisor</label>
    <referenceTo>Academic_Advisor__c</referenceTo>
    <relationshipLabel>Student Support Cases</relationshipLabel>
    <relationshipName>Assigned_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>