force-app/main/default/objects/Student_Support_Case__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic Support</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Financial Aid</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
            <value>
                <fullName>Career Guidance</fullName>
            </value>
            <value>
                <fullName>Housing Issue</fullName>
            </value>
            <value>
                <fullName>Disciplinary Matter</fullName>
            </value>
            <value>
                <fullName>Graduation Planning</fullName>
            </value>
            <value>
                <fullName>Registration Problem</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>