force-app/main/default/objects/Student_Support_Case__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Career</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>