force-app/main/default/objects/Student_Support_Case__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Student_Support_Case__c</referenceTo>
    <relationshipLabel>Student Support Cases</relationshipLabel>
    <relationshipName>Related_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>