force-app/main/default/objects/Student_Support_Case__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <description>How the case was resolved</description>
    <label>Resolution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>