force-app/main/default/objects/Student_Support_Case__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Support Cases</relationshipLabel>
    <relationshipName>Support_Cases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>