force-app/main/default/objects/Student_Support_Case__c/recordTypes/Student_Support_Case.recordType-meta.xml
<RecordType>
    <fullName>Student_Support_Case</fullName>
    <active>true</active>
    <label>Student Support Case</label>
</RecordType>